tests/metatype/typedesc_as_value.nim
discard """
  file: "typedesc_as_value.nim"
  errormsg: "'typedesc' metatype is not valid here; typed '=' instead of ':'?"
"""

var x = int

echo x
